--- a/src/components/crds-image/crds-image.scss
+++ b/src/components/crds-image/crds-image.scss
@@ -1,6 +1,7 @@
+@import '../../assets//stylesheets/globals/variables';
+
 .crds-img-container {
   display: block;
-  background-color: rgb(231, 231, 231);
   position: relative;
   overflow: hidden;
 
