--- a/src/components/crds-button/crds-button.scss
+++ b/src/components/crds-button/crds-button.scss
@@ -1,7 +1,7 @@
-.card-button {
+.crds-button {
   display: inline-block;
   background-color: $cyan-dark-b;
-  color: $white;
+  color: white;
   border-radius: 4px;
   margin-top: 1.375rem;
   text-decoration: none;
