--- a/src/components/crds-greeting/crds-greeting.scss
+++ b/src/components/crds-greeting/crds-greeting.scss
@@ -4,7 +4,8 @@
   opacity: 0;
   transition: opacity .45s .25s ease-in-out;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.15),0 4px 7px 0 rgba(0,0,0,0.05);
-  border-radius: 8px;
+  border-radius:11px;
+  background-color: white;
 
   &.fade-in {
     opacity: 1;
